--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-js-boilerplate",
-  "version": "3.52.0",
+  "name": "menu-cool",
+  "version": "0.0.1",
   "scripts": {
     "dev:spotlight": "spotlight-sidecar",
     "dev:next": "next dev",
@@ -31,10 +31,14 @@
     "@hookform/resolvers": "^3.4.2",
     "@libsql/client": "^0.6.1",
     "@logtail/pino": "^0.4.21",
+    "@radix-ui/react-slot": "^1.0.2",
     "@sentry/nextjs": "^7.116.0",
     "@spotlightjs/spotlight": "^1.2.17",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.0",
+    "lucide-react": "^0.394.0",
     "next": "^14.2.3",
     "next-intl": "^3.14.1",
     "pino": "^8.21.0",
@@ -43,6 +47,10 @@
     "react-dom": "~18.2.0",
     "react-hook-form": "^7.51.5",
     "sharp": "^0.33.4",
+    "tailwind-merge": "^2.3.0",
+    "unocss": "^0.61.0",
+    "unocss-preset-animations": "^1.0.2",
+    "unocss-preset-shadcn": "^0.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -71,10 +79,10 @@
     "@types/react": "^18.3.3",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
+    "@unocss/postcss": "^0.61.0",
     "@vitejs/plugin-react": "^4.3.0",
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/expect": "^1.6.0",
-    "autoprefixer": "^10.4.19",
     "checkly": "^4.6.3",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
@@ -96,7 +104,6 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-storybook": "^0.8.0",
-    "eslint-plugin-tailwindcss": "^3.17.0",
     "eslint-plugin-testing-library": "^6.2.2",
     "eslint-plugin-unused-imports": "^3.2.0",
     "eslint-plugin-vitest": "~0.4.1",
@@ -112,7 +119,6 @@
     "semantic-release": "^23.1.1",
     "start-server-and-test": "^2.0.3",
     "storybook": "^8.1.5",
-    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0",
